--- a/Ticketease.html
+++ b/Ticketease.html
@@ -91,9 +91,9 @@
         <p>© 2025 Treasure Kenule • TicketEase</p>
         <nav aria-label="Footer links">
           <ul class="footer-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="Ticketease.html">Home</a></li>
+            <li><a href="Ticket-about.html">About</a></li>
+            <li><a href="Ticket-contact.html">Contact</a></li>
           </ul>
         </nav>
       </div>
