--- a/Ticketease.html
+++ b/Ticketease.html
@@ -12,7 +12,7 @@
     <!-- Header / Navigation -->
     <header class="site-header" role="banner">
       <div class="container header-inner">
-        <a class="brand" href="index.html">TicketEase</a>
+        <a class="brand" href="Ticketease.html">TicketEase</a>
         <nav class="main-nav" role="navigation" aria-label="Primary">
           <ul>
             <li><a href="index.html">Home</a></li>
